# git-commit-infer.c

./: CMakeLists.txt  README  git-commit-infer.1.asciidoc  vcpkg.json
src/: main.c
